--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             text-align: center;
         }
         .body{
-        background-color: aquamarine;
+        background-color: blueviolet;
     }
     </style>
 </head>
