--- a/cupcake.html
+++ b/cupcake.html
@@ -27,23 +27,23 @@
         body{
             background-color: pink;
         }
-        .cupcakes{
+        .cupcake{
             
-            display: flex;
-            border-radius: 1em;
-            background-color: chartreuse;
-            
+            border-color: crimson;
+            border: solid coral 1em;
+            background-color: chocolate;
+            margin: 1em;
         }
-        @media (min-width: 768px) {
+        @media (min-width: 768px){
             .cupcakes{
             display: flex;
-            border-radius: 1em;
-            background-color: rgb(120, 47, 255);
-            margin-top: 1em;
-            margin-left: 2em;
-            margin-bottom: 1em;
-            margin-right: 2em;
         }
+        }
+        img{
+            border-color: coral;
+            background-color: blueviolet;
+            border: solid coral 1em;
+            margin: 1em;
         }
     </style>
 </head>
@@ -51,25 +51,20 @@
     <h1>cupcakes</h1>
     <h2>pretty sweet, right</h2>
     <div class="container">
-        <div class="cupcake">
-            <div>
-                <img src="http://www.cupcakeipsum.com/images/green_muffin.png"alt="">
+        <div class="cupcakes">
+            <div class="cupcake">
+                <img src="green_muffin.png"alt="">
                 Candy canes chupa chups I love soufflé cake topping gummi bears donut gummi bears. Ice cream caramels pudding lollipop candy canes macaroon dragée biscuit. Jujubes toffee bonbon tootsie roll bonbon danish. Macaroon macaroon chupa chups I love cupcake I love
             </div>
 
-            <div>
-                <img src="http://www.cupcakeipsum.com/images/light_pink_muffin.png"alt="">
+            <div class="cupcake">
+                <img src="light_pink_muffin.png"alt="">
                 I love chocolate cake tart I love pie I love sweet. Chocolate bar wafer dessert tart bonbon I love I love. Chocolate sweet roll I love bear claw brownie sugar plum I love donut bear claw. Marzipan jelly beans croissant jujubes halvah gummies gummi bears marzipan.
             </div>
 
-            <div>
-                <img src="http://www.cupcakeipsum.com/images/pink_pie.png"alt="">
+            <div class="cupcake">
+                <img src="pink_pie.png"alt="">
                 Lollipop sesame snaps fruitcake marzipan macaroon. Gummies oat cake lemon drops tiramisu chocolate bar biscuit chocolate cake. Dessert danish cake apple pie chupa chups candy halvah.
-            </div>
-
-            <div>
-                <img src="http://www.cupcakeipsum.com/images/pink_muffin.png"alt="">
-                Marzipan gingerbread lemon drops apple pie muffin pastry I love. Gummies cotton candy cupcake jujubes biscuit cake macaroon I love. Lollipop lollipop pastry croissant caramels jelly jelly beans apple pie marzipan.
             </div>
 
         </div>
