--- a/responsive.html
+++ b/responsive.html
@@ -7,6 +7,18 @@
     <title>Document</title>
 
     <style>
+        h1{
+            font-style: oblique;
+            font-weight: 600;
+            color: blueviolet;
+            border-radius: 1em;
+            background-color: darkred;
+            margin-top: 1em;
+            margin-left: 2em;
+            margin-bottom: 1em;
+            margin-right: 2em;
+            text-align: center;
+        }
         body{
             background-color: blue;
         }
@@ -28,23 +40,42 @@
         .input2{
             margin: 1em;
         }
+        .input3{
+            margin: 1em;
+        }
+        .input4{
+            margin: 1em;
+        }
+        .input5{
+            margin: 1em;
+        }
     </style>
 
 </head>
 <body>
     <h1>My file</h1>
 
-    <div class="input1">
-    <label for="first name">first name</label>
-    <input type="text" name="first name" ></div>
-
-    <div class="input2">
-        <input type="text" name="surname" >
-        <label for="surname name">surname</label>
-    </div>
-
     <div class="box">
         Exploring the box model
     </div>
+    <div class="input1">
+    <label for="first name">first Name</label>
+    <input type="text" name="first name" ></div>
+
+    <div class="input2">
+        <label for="secind name name">Second Name</label>
+        <input type="text" name="second name" ></div>
+
+    <div class="input3">
+        <label for="surname name">Surname</label>
+        <input type="text" name="surname" ></div>
+
+    <div class="input4">
+        <label for="ID">ID</label>
+        <input type="text" name="ID" ></div>
+
+    <div class="input5">
+        <label for="status">Status</label>
+        <input type="text" name="status" ></div>
 </body>
 </html>
